# CineReserve

./: .dockerignore  .env.example  .gitignore  Dockerfile  README.md  docker-compose.yml  pyproject.toml
.github/workflows/: ci-cd.yml  ci.yml
cinema/: admin.py  apps.py  cache_utils.py  models.py  signals.py  tasks.py  tests.py  urls.py  views.py
cinema/management/commands/: seed_cinema.py
cinema/migrations/: 0001_initial.py  0002_alter_ticket_seat.py
cinema/serializers/: __init__.py  seat_serializer.py  session_serializer.py  ticket_serializer.py
config/: settings.py  urls.py
movies/: admin.py  models.py  tests.py  urls.py  views.py
movies/migrations/: 0001_initial.py
movies/serializers/: movie_serializer.py
users/: tests.py  views.py
users/serializers/: user_serializer.py
