[project]
name = "cinereserve"
version = "0.1.0"
description = ""
authors = [
    {name = "Heriberto Costa Monteiro",email = "heribertoomonteiroo@gmail.com"}
]
requires-python = ">=3.12, < 4.0"
dependencies = [
]


[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"
