[project]
name = "cinereserve"
version = "0.1.0"
description = ""
authors = [
    {name = "Heriberto Costa Monteiro",email = "heribertoomonteiroo@gmail.com"}
]
requires-python = ">=3.12, <4.0"
dependencies = [
    "django (>=6.0.3,<7.0.0)",
    "djangorestframework (>=3.16.1,<4.0.0)",
    "djangorestframework-simplejwt (>=5.5.1,<6.0.0)",
    "redis (>=7.3.0,<8.0.0)",
    "django-environ (>=0.13.0,<0.14.0)",
    "django-redis (>=6.0.0,<7.0.0)",
    "drf-spectacular (>=0.29.0,<0.30.0)",
    "psycopg[binary] (>=3.3.3,<4.0.0)"
]


[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"
